2000-05-03  Mo DeJong  <mdejong@cygnus.com>

	* src/stream.cpp: Use memcpy instead of
	wmemcpy which is not supported on all systems.

2000-05-03  Mo DeJong  <mdejong@cygnus.com>

	* src/bytecode.cpp: Commented out else
	block that was added as part of the
	fix for bug #198 because it was core dumping.

2000-05-03  Mo DeJong  <mdejong@cygnus.com>

	* src/jikesapi.h: Moved inner classes
	into the public scope. This was causing
	compiler errors with non g++ compilers.

2000-05-02  Mo DeJong  <mdejong@cygnus.com>

	* src/config.h:
	* src/control.cpp:
	* src/jikesapi.cpp: Removed all uses
	of #ifdef NO_LEAKS.

2000-04-09  Mo DeJong  <mdejong@cygnus.com>

	* src/decl.cpp:
	* src/modifier.cpp:
	* src/semantic.h: Renamed Semantic::ProcessAbstractMethodModifiers
	to Semantic::ProcessInterfaceMethodModifiers.

2000-04-09  Mo DeJong  <mdejong@cygnus.com>

	* src/Makefile.in: Added install-unstripped, install-stripped,
	and install-docs rules. Made install-unstripped the default.
	Fixed the install rules to use exec_prefix instead of the prefix.
	Fixed problem installing the docs when build dir != src dir.

2000-04-09  Vadim Zaliva  <lord@crocodile.org>

	* ChangeLog moved from doc/ to project root per
	Mo DeJong <mdejong@cygnus.com> suggestion.	

	* error.cpp (PrintMISMATCHED_INHERITED_METHODS_IN_BASE): 
	* error.h (class SemanticError): 
	* decl.cpp (CompleteSymbolTable): corrected bug #102 related to 
	not reporting return type conflicts for same signature methods
	inherited from 2 super-interfaces.
	Added new error message MISMATCHED_INHERITED_METHODS_IN_BASE to
	report this situation.

2000-04-07  Vadim Zaliva  <lord@crocodile.org>

	* error.cpp (StaticInitializer): type mismatch corrected. Fix
	suggested by foad@tao-group.com. Bug #156.

	* bytecode.cpp (EmitMethodInvocation): Corrected bug #198.

2000-04-05  Vadim Zaliva  <lord@crocodile.org>

	* expr.cpp (ConstructorAccessCheck): corrected problem with not reporting